# rules_twirl

./: .bazelrc  .gitignore  .travis.yml  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  dependencies.yml  index.html  play_2_5_twirl_compiler_cli_install.json  play_2_6_twirl_compiler_cli_install.json  play_2_7_twirl_compiler_cli_install.json  skylint.sh  test-dependencies.yml  test_workspace.bzl  twirl.bzl  twirl_compiler_cli_2_13_install.json  twirl_compiler_cli_3_install.json  twirl_install.json  twirl_test_2_13_install.json  twirl_test_3_install.json  twirl_test_install.json  versions.bzl  workspace.bzl
.github/workflows/: ci.yml
compiler-cli/: BUILD.bazel
default-compiler-clis/: BUILD.bazel
dev/: BUILD.bazel
dev/stardoc/: BUILD.bazel
docs/: index.html
docs/stardoc/: twirl.md
docs/twirl/: twirl.html
scala/: BUILD  BUILD.bazel
scripts/: ci-stardoc-update.sh  format.sh  gen-deps.sh  gen-docs.sh  lint.sh  publish.sh  skylint.sh  travis.sh
src/main/scala/: LucidTwirlTemplateCompiler.scala
test/: BUILD.bazel  Person.scala  StrangeTxtFormatter.scala  TwirlCompilerBazelE2ETest.sh  TwirlCompilerTest.scala  UTF8TwirlCompilerTest.scala  reproducibility_test.sh  run_all_tests.sh  twirl-compiler-test.bzl  twirl-jvm-flags-test.bzl  twirl_compiler_bazel_e2e_test.sh
test/twirl-templates/twirl/com/foo/utf8/: hello.scala.html  hello.scala.txt
test/twirl-templates/twirl/com/foo/views/: addImports.scala.txt  customFormatter.scala.txt  hello.scala.html  hello.scala.js  hello.scala.txt  hello.scala.xml  playImports.scala.txt
toolchain/scala/: BUILD.bazel
tools/: bazel.rc  ci-skydoc-update.sh  lemur_rsa.enc  skylint.sh
twirl/: BUILD  BUILD.bazel  twirl.bzl  twirl.html
twirl-compiler/: BUILD  BUILD.bazel
twirl-compiler-cli/: BUILD.bazel  CommandLineTwirlTemplateCompiler.scala  package2.scala  package3.scala  pom.xml.tmpl  twirl-compiler-cli.bzl
twirl-compiler/src/main/scala/: CommandLineTwirlTemplateCompiler.scala
twirl-compiler/src/main/twirl/com/lucidchart/views/: hello.scala.html
twirl-toolchain/: BUILD.bazel  create-toolchain.bzl  register-toolchains.bzl  transitions.bzl  twirl-toolchain.bzl
