java_binary(
  name = "scala_2_11_play_2_5",
  runtime_deps = ["@twirl//:com_lucidchart_twirl_compiler_cli_2_11"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  visibility = ["//visibility:public"]
)

java_binary(
  name = "scala_2_11_play_2_6",
  runtime_deps = ["@twirl//:com_lucidchart_twirl_compiler_cli_2_11"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  visibility = ["//visibility:public"]
)

java_binary(
  name = "scala_2_11_play_2_7",
  runtime_deps = ["@twirl//:com_lucidchart_twirl_compiler_cli_2_11"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  visibility = ["//visibility:public"]
)

java_binary(
  name = "scala_2_12_play_2_6",
  runtime_deps = ["@twirl//:com_lucidchart_twirl_compiler_cli_2_11"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  visibility = ["//visibility:public"]
)

java_binary(
  name = "scala_2_12_play_2_7",
  runtime_deps = ["@twirl//:com_lucidchart_twirl_compiler_cli_2_11"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  visibility = ["//visibility:public"]
)
