load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "configure_zinc_scala",
    "scala_library",
)

scala_version = "2.13.3"

compiler_classpath = [
    "@twirl//:org_scala_lang_scala_compiler",
    "@twirl//:org_scala_lang_scala_library",
    "@twirl//:org_scala_lang_scala_reflect",
]

runtime_classpath = [
    "@twirl//:org_scala_lang_scala_library",
]

configure_bootstrap_scala(
    name = "bootstrap",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)

configure_zinc_scala(
    name = "zinc",
    compiler_bridge = "@twirl//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc",
    visibility = ["//visibility:public"],
)
