load("@rules_scala_annex//rules:scala.bzl", "scala_binary")

scala_binary(
  name = "twirl-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulestwirl.twirl.CommandLineTwirlTemplateCompiler",
  deps = [
    "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/worker:worker",
    "@twirl//:com_github_scopt_scopt_2_13",
    "@twirl//:com_typesafe_play_twirl_compiler_2_13",
    "@twirl//:org_scala_lang_modules_scala_parser_combinators_2_13",
  ],
  deps_used_whitelist = [
    "@twirl//:org_scala_lang_modules_scala_parser_combinators_2_13",
  ],
  runtime_deps = [
    "@twirl//:org_scala_lang_scala_reflect",
  ],
)
